--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,10 +1,20 @@
 {{outlet}}
-<center style = "margin-top:25%">
-    <form>
-        <div class = "form-group">
-            {{input name = "email" type = "email" placeholder = "email" value = email}}<br/>
-            {{input name = "password" type = "password" placeholder = "password" value = password}}<br/>
-            <button  {{action 'validateLogin'}} class = "btn btn-success">Log In</button>
-        </div>
-    </form>
+<center style = "margin-top:15%">
+    <div style = "border:2px solid; border-color:#f2f2f2; background-color: #f2f2f2; border-radius:8px; width:30%">
+        <legend style="margin-left:-80%">Login</legend>
+        <form>
+            <div class = "form-group">
+                <div class="form-group">
+                <label for="email">Email:</label>
+                {{input name = "email" type = "email" placeholder = "email" value = email}}<br/>
+                </div>
+                <div class="form-group">
+                 <label for="pwd">Password:</label>
+                {{input name = "password" type = "password" placeholder = "password" value = password}}<br/>
+                </div>
+                <button  {{action 'validateLogin'}} class = "btn btn-success">Log In</button>
+            </div>
+        </form>
+    </div>
+    
 </center>
